--- a/EFCore.DbComment.csproj
+++ b/EFCore.DbComment.csproj
@@ -4,9 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>EFCore.DbComment</RootNamespace>
     <PackageId>EFCore.DbComment</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>ptrushin</Authors>
     <Company>patrushi</Company>
+    <PackageProjectUrl>https://github.com/patrushi/EFCore.DbComment</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
