--- a/EFCore.DbComment.csproj
+++ b/EFCore.DbComment.csproj
@@ -1,19 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>EFCore.DbComment</RootNamespace>
     <PackageId>EFCore.DbComment</PackageId>
-    <Version>1.0.3</Version>
+    <Version>2.0.1</Version>
     <Authors>ptrushin</Authors>
     <Company>patrushi</Company>
     <PackageDescription>https://github.com/patrushi/EFCore.DbComment</PackageDescription>
     <PackageProjectUrl>https://github.com/patrushi/EFCore.DbComment</PackageProjectUrl>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1"/>
   </ItemGroup>
-
 </Project>
